<resources>

    <string name="app_name">Recipe Divider</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_recipe_splitter">Servings</string>
    <string name="title_activity_recipe_results">RecipeResultsActivity</string>
    <string name="share">Share</string>
    <string name="calculate_new_recipe">CALCULATE NEW RECIPE</string>
    <string name="next">Next</string>
    <string name="save_to_recipe_box">SAVE TO RECIPE BOX</string>
    <string name="title_activity_recipe_box">RecipeBoxActivity</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="enter_recipe_name">ENTER RECIPE NAME</string>
    <string name="enter_original_recipe">ENTER ORIGINAL RECIPE:</string>
    <string name="ingredient_n">INGREDIENT %1$d</string>
    <string name="quantity">QUANTITY</string>
    <string name="empty" />
    <string name="original_servings">ORIGINAL SERVINGS</string>
    <string name="desired_servings">DESIRED SERVINGS</string>
    <string name="units_of_measure">UNITS OF MEASURE</string>
    <string name="cook_time">COOK TIME</string>
    <string name="divider">Divider</string>
    <string name="your_recipe">Your Recipe</string>
    <string name="quantity_unit_ingredient">%1$s %2$s %3$s</string>
    <string name="divide_recipe">Divide Recipe</string>
    <string name="recipe_box">Recipe Box</string>
    <string name="please_complete_each_field">Please complete each field</string>

    <!-- Units -->
    <string name="na">n/a</string>
    <string name="oz">oz</string>
    <string name="tbsp">tbsp</string>
    <string name="cup">cup</string>

    <string-array name="units_array">
        <item>@string/na</item>
        <item>@string/oz</item>
        <item>@string/tbsp</item>
        <item>@string/cup</item>
    </string-array>

</resources>