<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <EditText
        android:id="@+id/et_ingredient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:hint="@string/ingredient_n"
        android:inputType="text"
        android:paddingBottom="13dp"
        android:paddingLeft="10dp"
        android:paddingTop="13dp"
        android:textColor="#000000"
        android:textSize="15sp" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_label"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:text="@string/quantity"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/et_quantity"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:inputType="number"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_units_of_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/input_label"
            android:paddingBottom="13dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="13dp"
            android:text="@string/units_of_measure"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/sp_units"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textColor="#000000" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#eae6d8" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f1eeea" />

</LinearLayout>